18、门户->部门政务信息梳理目录->业务目录增加按服务对象筛选

--- a/sources/catalog/depCardingCatalog/department-resources/style.scss
+++ b/sources/catalog/depCardingCatalog/department-resources/style.scss
@@ -1,4 +1,27 @@
 @import "../../../common/base.scss";
 #resources-department{
-    
+    .filters{
+		float:right;
+		margin: 15px;
+		.checkbox,.selection{
+			display:inline-block;
+			    margin-right: 10px;
+			    .el-select{
+			    	    width: 120px;
+			    }
+			    .el-radio{
+			    	padding-left:5px;
+			    }
+			    .el-radio+.el-radio{
+			    	margin-left:0;
+			    }
+		}
+		.checkbox-primary input[type="checkbox"]:checked + label::before, .checkbox-primary input[type="radio"]:checked + label::before{
+			background-color: $dark-blue;
+    		border-color: $dark-blue;
+		}
+		.checkbox label::after{
+			top:2px;
+		}
+	}
 }
