--- a/sources/dashboard/style.scss
+++ b/sources/dashboard/style.scss
@@ -388,7 +388,7 @@
         border: 1px solid #DFDFDF;
         padding-top: 50px;
         display: inline-block;
-        margin: 0 20px;
+        margin: 0 20px 10px;
         box-sizing: border-box;
         img {
           width: 44px;
