--- a/sources/catalog/resources/style.scss
+++ b/sources/catalog/resources/style.scss
@@ -1,60 +1,71 @@
 @import "../../common/base.scss";
-
 #resources {
-	.filters{
-		float:right;
-		margin: 15px;
-		.checkbox,.selection{
-			display:inline-block;
-			    margin-right: 10px;
-			    .el-select{
-			    	    width: 120px;
-			    }
-			    .el-radio{
-			    	padding-left:5px;
-			    }
-			    .el-radio+.el-radio{
-			    	margin-left:0;
-			    }
-		}
-		.checkbox-primary input[type="checkbox"]:checked + label::before, .checkbox-primary input[type="radio"]:checked + label::before{
-			background-color: $dark-blue;
-    		border-color: $dark-blue;
-		}
-		.checkbox label::after{
-			top:2px;
-		}
+  .filters {
+    float: right;
+    margin: 15px;
+    .checkbox,
+    .selection {
+      display: inline-block;
+      margin-right: 10px;
+      .el-select {
+        width: 120px;
+      }
+      .el-radio {
+        padding-left: 5px;
+      }
+      .el-radio+.el-radio {
+        margin-left: 0;
+      }
+    }
+    .checkbox-primary input[type="checkbox"]:checked+label::before,
+    .checkbox-primary input[type="radio"]:checked+label::before {
+      background-color: $dark-blue;
+      border-color: $dark-blue;
+    }
+    .checkbox label::after {
+      top: 2px;
+    }
+  }
+  .data-detail-view {
+    background: #FFF;
+    padding: 15px;
+    border-top: 1px solid #EEE;
+    >div {
+      border-bottom: 1px solid #EEE;
+      padding-bottom: 5px;
+    }
+    .detail-title {
+      font-size: 15px;
+      color: $dark-blue;
+      padding: 5px 0;
+    }
+    .el-col {
+      padding: 2px 0;
+      .item-value {
+        color: $main-blue;
+      }
+      .el-rate {
+        display: inline-block;
+        vertical-align: top;
+      }
+    }
 	}
-	.data-detail-view {
-		background: #FFF;
-		padding: 15px;
-		border-top: 1px solid #EEE;
-
-		>div {
-			border-bottom: 1px solid #EEE;
-			padding-bottom: 5px;
-		}
-
-		.detail-title {
-			font-size: 15px;
-			color: $dark-blue;
-			padding: 5px 0;
-		}
-
-		.el-col {
-			padding: 2px 0;
-
-			.item-value {
-				color: $main-blue;
-			}
-
-			.el-rate {
-				display: inline-block;
-				vertical-align: top;
-			}
-
-		}
-
+	.img{
+		width: 12px;
+		height: 12px;
+		margin-right: 5px;
 	}
-
+  .capsulate {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 5px;
+  }
+  .isCapsulate {
+    background: $main-blue;
+  }
+  .noCapsulate {
+    background: $silver;
+  }
 }
