--- a/sources/dashboard/style.scss
+++ b/sources/dashboard/style.scss
@@ -404,6 +404,11 @@
         .des {
           margin-top: 20px;
           font-size: 16px;
+           width: 80%;
+            display: inline-block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         a {
           text-decoration: none;
