--- a/sources/developer/style.scss
+++ b/sources/developer/style.scss
@@ -88,7 +88,12 @@
 			}
 			a {
 				display: inline-block;
-				min-width: 150px;
+				// min-width: 150px;
+				width: 203px;
+				display: inline-block;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
 			}
 
 			.spliter {
