--- a/sources/catalog/details/style.scss
+++ b/sources/catalog/details/style.scss
@@ -78,8 +78,10 @@
 		background: #F9FBFF;
 		border: 1px solid #E5E9F0;
 	}
-
-	.el-rate {
+.average-score{
+	display: inline-block;
+}
+.score	.el-rate {
 		padding: 30px 0;
 		text-align: center;
 
