门户接口在申请时，如果此接口对应的资源与其他资源有关联，则申请时，需要支持是否同时访问其他相关资源的接口

--- a/sources/catalog/details/style.scss
+++ b/sources/catalog/details/style.scss
@@ -81,7 +81,7 @@
 .average-score{
 	display: inline-block;
 }
-.score	.el-rate {
+.score{	.el-rate {
 		padding: 30px 0;
 		text-align: center;
 
@@ -90,7 +90,7 @@
 			margin: 0 16px;
 		}
 
-	}
+	}}
 
 	.el-table {
 		.apply-link {
