--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -25,7 +25,7 @@
             <span class="el-dropdown-link"><img src="../assets/header/username.png" />&nbsp;&nbsp;{{username}} <i class="el-icon-caret-bottom el-icon--right"></i></span>
             <el-dropdown-menu slot="dropdown">
               <el-dropdown-item>
-                <router-link to="/layout/admin/applyList">个人中心</router-link>
+                <router-link to="/layout/admin/need">个人中心</router-link>
               </el-dropdown-item>
               <el-dropdown-item divided>
                 <router-link to="/layout/admin/applyList">申请列表</router-link>
