资源详情页面表格无链接的字段鼠标样式改为默认，数据项点击事件handleItemClick找回

--- a/sources/catalog/style.scss
+++ b/sources/catalog/style.scss
@@ -150,6 +150,7 @@
       border-top: 1px solid #ddd;
       border-left: 1px solid #F2F2F2;
       border-right: 1px solid #F2F2F2;
+      cursor: default;
     }
   } // .el-table th, .el-table__footer-wrapper thead div, .el-table__header-wrapper thead div {
   // 	background: #E8F2F9;
